# showcase

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: apt-repo.yml  ci.yml  release.yml
docs/: DISTRIBUTING.md
docs/superpowers/plans/: 2026-05-22-showcase-plan1-backend-core.md  2026-05-22-showcase-plan2-browse-ui.md  2026-05-22-showcase-plan3-uninstall.md  2026-05-24-showcase-plan-appimage.md  2026-05-24-showcase-plan-updates.md
docs/superpowers/specs/: 2026-05-22-showcase-app-manager-design.md  2026-05-24-showcase-appimage-design.md  2026-05-24-showcase-updates-design.md
scripts/: build-apt-repo.sh  setup-deps.sh
src/: app.html  vitest.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregate.rs  appimage.rs  commands.rs  desktop.rs  details.rs  dpkg.rs  icons.rs  launch.rs  lib.rs  main.rs  model.rs  runner.rs  sizes.rs  snapd.rs  uninstall.rs  updates.rs
src-tauri/src/sources/: apt.rs  flatpak.rs  mod.rs  snap.rs
src-tauri/tests/: integration_enumerate.rs
src-tauri/tests/fixtures/apps/: good.desktop  hidden.desktop
src-tauri/tests/fixtures/dpkg-info/: gedit:amd64.list
src/lib/: api.test.ts  api.ts  avatar.test.ts  avatar.ts  categories.test.ts  categories.ts  errors.test.ts  errors.ts  filter.test.ts  filter.ts  format.test.ts  format.ts  stores.test.ts  stores.ts  theme.css  types.ts
src/lib/components/: AppCard.svelte  AppCard.test.ts  AppDetail.svelte  (+13 more)
src/routes/: +layout.svelte  +page.svelte
static/: theme-init.js
